--- a/lab/lab1/contact.html
+++ b/lab/lab1/contact.html
@@ -24,7 +24,7 @@
         <br /><br />
         
         <div id="formSection">
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeQuCfj-sxTV7kcQLQCM2JkMQDCj-xEJ2n7Dj6yZFL1FIFpJw/viewform?embedded=true" width="760" height="500"></iframe>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSepdNk_ymijcF2efMh3sl3xQNCEWsi13rJtepkxJVikh7XOnA/viewform?embedded=true" width="640" height="1015" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
         </div>
         
         <hr id="bottomLine">
